force-app/main/default/objects/Redirection_Enquiry_Rule__mdt.object
<CustomObject>
    <description>Custom metadata used to automatically create an enquiry whenever a system address has been included on the ToAddress or CcAddress of an outbound email</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clear_Related_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clear Related Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enquiry_Redirection_Key__c</fullName>
        <description>Key compared with the Redirection Key on case. Cloning will occur if allowed and Key does not match.</description>
        <inlineHelpText>If populated, this rule will support same record-type redirection. This value will be compared with the Redirection Key field on the original enquiry and trigger cloning event when a mismatch is found.</inlineHelpText>
        <label>Enquiry Redirection Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Enquiry_Record_Type__c</fullName>
        <label>From Enquiry Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Comment_to_clone__c</fullName>
        <description>Internal comment posted on Clone/Redirected enquiry</description>
        <inlineHelpText>{0} = original case number, {1} = original record type, {2} = clone case number, {3} = clone record type</inlineHelpText>
        <label>Internal Comment to clone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Comment_to_original__c</fullName>
        <description>Internal comment posted on original enquiry</description>
        <inlineHelpText>{0} = original case number, {1} = original record type, {2} = clone case number, {3} = clone record type</inlineHelpText>
        <label>Internal Comment to original</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mark_original_as_parent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Original enquiries are marked as the parent of new redirected enquiries</description>
        <label>Mark original as parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Redirected_Enquiry_Type__c</fullName>
        <description>Enquiry Type value to be set on cloned enquiry</description>
        <label>Redirected Enquiry Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirected_Group__c</fullName>
        <description>Group value to be set on cloned enquiry</description>
        <label>Redirected Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirected_Origin__c</fullName>
        <label>Redirected Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirected_Priority__c</fullName>
        <description>Priority value to be set on cloned enquiry</description>
        <label>Redirected Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirected_Queue__c</fullName>
        <label>Redirected Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirected_Status__c</fullName>
        <label>Redirected Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirected_Student_Type__c</fullName>
        <label>Redirected Student Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Email_Address__c</fullName>
        <label>Target Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Enquiry_Record_Type__c</fullName>
        <label>Target Enquiry Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Faculty__c</fullName>
        <label>Target Faculty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Assignment_Rules__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Checkbox to enable/disable running of Case Assignment rules</inlineHelpText>
        <label>Use Assignment Rules</label>
        <type>Checkbox</type>
    </fields>
    <label>Redirection Enquiry Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Active__c</columns>
        <columns>MasterLabel</columns>
        <columns>From_Enquiry_Record_Type__c</columns>
        <columns>Target_Enquiry_Record_Type__c</columns>
        <columns>Target_Faculty__c</columns>
        <columns>Target_Email_Address__c</columns>
        <columns>Redirected_Origin__c</columns>
        <columns>Redirected_Queue__c</columns>
        <columns>Redirected_Status__c</columns>
        <columns>Redirected_Student_Type__c</columns>
        <columns>Clear_Related_Contact__c</columns>
        <columns>Use_Assignment_Rules__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Redirection Enquiry Rule</pluralLabel>
</CustomObject>